fix button alignment issue

--- a/static/view_event_user.css
+++ b/static/view_event_user.css
@@ -26,7 +26,7 @@
 
 .event-header-flex-item {
  /* Allow the items to grow and take up equal space within the flex container */
-    padding: 10px; /* Add padding around the items */
+    padding: 0px; /* Add padding around the items */
     text-align: left; /* Center the content horizontally within each item */
 }
 
@@ -35,7 +35,10 @@
     flex-direction: column;
     align-items: flex-end; 
 } */
-
+.event-header-flex-item:nth-child(2) {
+    padding: 20px;
+    align-self: flex-end;
+}
 
 /* Style for the Unregister button */
 form input#unregister[type="submit"] {
